# codeleap_backend

./: README.md  conftest.py  pyproject.toml
codeleap_backend/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  viewsets.py
posts/migrations/: 0001_initial.py
posts/tests/: factories.py  test_viewsets.py
